# jeryu-tool-finder

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  VERSION
.github/workflows/: ci.yml
agent/: JANKURAI_STANDARD.md  audit-policy.toml  boundaries.toml  generated-zones.toml  owner-map.json  proof-lanes.toml  test-map.json
docs/: architecture.md  release.md  testing.md  tool-finder.md
fixtures/: sample-clusters.json
ops/: AGENTS.md
ops/ci/: check.sh  lib.sh  pr-ci.sh  score.sh  security.sh
ops/git-hooks/: pre-push
scripts/: ci-doctor.sh  ci-local.sh  dossier.py  propose.py  registry_summary.py  scan_family.py
src/: dossier.rs  errors.rs  main.rs  paths.rs  propose.rs  scan.rs  summary.rs
tests/: finder.rs
